{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 171,
  "lineage": "70253d94-dcd3-642b-de8e-ea0afe5c6978",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:loadbalancer/app/menuqr-vpc-api/2009c6052ff2eb61",
            "arn_suffix": "app/menuqr-vpc-api/2009c6052ff2eb61",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "menuqr-vpc-api-1707779840.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397812108:loadbalancer/app/menuqr-vpc-api/2009c6052ff2eb61",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "menuqr-vpc-api",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06c1523e23ab00841"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025803df16645b2b7"
              },
              {
                "subnet_id": "subnet-04d1374f791d7e9fe"
              }
            ],
            "subnets": [
              "subnet-025803df16645b2b7",
              "subnet-04d1374f791d7e9fe"
            ],
            "vpc_id": "vpc-047fb553fa564aca0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:loadbalancer/app/menuqr-vpc-api/2009c6052ff2eb61"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:listener/app/menuqr-vpc-api/2009c6052ff2eb61/0d9c7330309c85e2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:targetgroup/mq-2026051619414461600000000e/3a787b044fb4a804",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397812108:listener/app/menuqr-vpc-api/2009c6052ff2eb61/0d9c7330309c85e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:loadbalancer/app/menuqr-vpc-api/2009c6052ff2eb61",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:listener/app/menuqr-vpc-api/2009c6052ff2eb61/0d9c7330309c85e2"
          },
          "dependencies": [
            "aws_lb.backend",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:targetgroup/mq-2026051619414461600000000e/3a787b044fb4a804",
            "arn_suffix": "targetgroup/mq-2026051619414461600000000e/3a787b044fb4a804",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/q/health/ready",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397812108:targetgroup/mq-2026051619414461600000000e/3a787b044fb4a804",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:767397812108:loadbalancer/app/menuqr-vpc-api/2009c6052ff2eb61"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mq-2026051619414461600000000e",
            "name_prefix": "mq-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397812108:targetgroup/mq-2026051619414461600000000e/3a787b044fb4a804"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-06c1523e23ab00841",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c1523e23ab00841",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "menuqr-vpc-alb-2026051619414569550000000f",
            "name_prefix": "menuqr-vpc-alb-",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sg-06c1523e23ab00841",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-0713f449636082172",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0713f449636082172",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d579c6d650e113bb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "menuqr-rds-2026051619414461430000000d",
            "name_prefix": "menuqr-rds-",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sg-0713f449636082172",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-077a50c709e266302",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077a50c709e266302",
            "ingress": [],
            "name": "menuqr-db-client-20260516194147327700000010",
            "name_prefix": "menuqr-db-client-",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sg-077a50c709e266302",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-03c20bda36cbea26e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c20bda36cbea26e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Quarkus desde ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06c1523e23ab00841"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "menuqr-vpc-fargate-20260516194150541100000014",
            "name_prefix": "menuqr-vpc-fargate-",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sg-03c20bda36cbea26e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-0d579c6d650e113bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0713f449636082172"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0d579c6d650e113bb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077a50c709e266302"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "menuqr-rds-proxy-2026051619414461420000000b",
            "name_prefix": "menuqr-rds-proxy-",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sg-0d579c6d650e113bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-05ea2d1090704e24f",
            "description": "Interface VPC endpoints (Secrets Manager, SQS, ECR)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ea2d1090704e24f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS desde ECS Fargate",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c20bda36cbea26e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS desde Lambda orquestador (db_client)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077a50c709e266302"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "menuqr-vpc-vpce-2026051619414461430000000c",
            "name_prefix": "menuqr-vpc-vpce-",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sg-05ea2d1090704e24f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc-endpoint/vpce-0f8552e5937f1e8ac",
            "dns_entry": [
              {
                "dns_name": "vpce-0f8552e5937f1e8ac-okelxxwa.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f8552e5937f1e8ac-okelxxwa-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f8552e5937f1e8ac-okelxxwa-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0071926O5D5WXQOECC7"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0535436AIU9ZHGPT5KO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f8552e5937f1e8ac",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02db935c2b1840712",
              "eni-0cd9e502d022cf113"
            ],
            "owner_id": "767397812108",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05ea2d1090704e24f"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.30.2.64",
                "subnet_id": "subnet-0a482c21c4212b357"
              },
              {
                "ipv4": "172.30.3.187",
                "subnet_id": "subnet-0f55fd885ad8f8779"
              }
            ],
            "subnet_ids": [
              "subnet-0a482c21c4212b357",
              "subnet-0f55fd885ad8f8779"
            ],
            "tags": {
              "Name": "menuqr-vpc-ecr-api"
            },
            "tags_all": {
              "Name": "menuqr-vpc-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpce-0f8552e5937f1e8ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_interface_endpoints",
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc-endpoint/vpce-08c189e27b84e25ea",
            "dns_entry": [
              {
                "dns_name": "vpce-08c189e27b84e25ea-fcns5c2a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c189e27b84e25ea-fcns5c2a-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c189e27b84e25ea-fcns5c2a-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z053448066MPN56367R9"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z053448066MPN56367R9"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z104342519OB6HPF82JQN"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z104342519OB6HPF82JQN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08c189e27b84e25ea",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00817351630ac2eee",
              "eni-0724d45117634b19e"
            ],
            "owner_id": "767397812108",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05ea2d1090704e24f"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.30.2.58",
                "subnet_id": "subnet-0a482c21c4212b357"
              },
              {
                "ipv4": "172.30.3.193",
                "subnet_id": "subnet-0f55fd885ad8f8779"
              }
            ],
            "subnet_ids": [
              "subnet-0a482c21c4212b357",
              "subnet-0f55fd885ad8f8779"
            ],
            "tags": {
              "Name": "menuqr-vpc-ecr-dkr"
            },
            "tags_all": {
              "Name": "menuqr-vpc-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpce-08c189e27b84e25ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_interface_endpoints",
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "com.amazonaws.us-east-1.dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc-endpoint/vpce-0037a37873fe1c157",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0037a37873fe1c157",
            "ip_address_type": "ipv4",
            "owner_id": "767397812108",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-068795c15dacb6fcc",
              "rtb-0f9788c9f3576ab7c"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpce-0037a37873fe1c157",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "com.amazonaws.us-east-1.s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc-endpoint/vpce-0c65a96856fb12e0d",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c65a96856fb12e0d",
            "ip_address_type": "ipv4",
            "owner_id": "767397812108",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-068795c15dacb6fcc",
              "rtb-0f9788c9f3576ab7c"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpce-0c65a96856fb12e0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc-endpoint/vpce-05a3eddd4b71b923a",
            "dns_entry": [
              {
                "dns_name": "vpce-05a3eddd4b71b923a-kx421k53.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05a3eddd4b71b923a-kx421k53-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05a3eddd4b71b923a-kx421k53-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1036778NP20V7GP5TTI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05a3eddd4b71b923a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019761448a803c10c",
              "eni-03b6f16d662dd9718"
            ],
            "owner_id": "767397812108",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05ea2d1090704e24f"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.30.2.109",
                "subnet_id": "subnet-0a482c21c4212b357"
              },
              {
                "ipv4": "172.30.3.224",
                "subnet_id": "subnet-0f55fd885ad8f8779"
              }
            ],
            "subnet_ids": [
              "subnet-0a482c21c4212b357",
              "subnet-0f55fd885ad8f8779"
            ],
            "tags": {
              "Name": "menuqr-vpc-secretsmanager"
            },
            "tags_all": {
              "Name": "menuqr-vpc-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpce-05a3eddd4b71b923a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_interface_endpoints",
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc-endpoint/vpce-0415008429e6b770b",
            "dns_entry": [
              {
                "dns_name": "vpce-0415008429e6b770b-ujl6z4sh.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0415008429e6b770b-ujl6z4sh-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0415008429e6b770b-ujl6z4sh-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10424151Y7GS6K9Z2QCK"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z05354751GWTOFYPYY8IZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0415008429e6b770b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0897194345b280a8f",
              "eni-0e6ce7d58bb012fa3"
            ],
            "owner_id": "767397812108",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05ea2d1090704e24f"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.30.2.215",
                "subnet_id": "subnet-0a482c21c4212b357"
              },
              {
                "ipv4": "172.30.3.86",
                "subnet_id": "subnet-0f55fd885ad8f8779"
              }
            ],
            "subnet_ids": [
              "subnet-0a482c21c4212b357",
              "subnet-0f55fd885ad8f8779"
            ],
            "tags": {
              "Name": "menuqr-vpc-sqs"
            },
            "tags_all": {
              "Name": "menuqr-vpc-sqs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpce-0415008429e6b770b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_interface_endpoints",
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "proxy_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group-rule/sgr-02bfe86c8a8e57000",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-02bfe86c8a8e57000",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0713f449636082172",
            "region": "us-east-1",
            "security_group_id": "sg-0d579c6d650e113bb",
            "security_group_rule_id": "sgr-02bfe86c8a8e57000",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sgr-02bfe86c8a8e57000",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.proxy",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_from_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group-rule/sgr-00ec4dfc701668b1b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-00ec4dfc701668b1b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d579c6d650e113bb",
            "region": "us-east-1",
            "security_group_id": "sg-0713f449636082172",
            "security_group_rule_id": "sgr-00ec4dfc701668b1b",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sgr-00ec4dfc701668b1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.proxy",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "proxy_from_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group-rule/sgr-03c66a39adc602b6f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-03c66a39adc602b6f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-077a50c709e266302",
            "region": "us-east-1",
            "security_group_id": "sg-0d579c6d650e113bb",
            "security_group_rule_id": "sgr-03c66a39adc602b6f",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sgr-03c66a39adc602b6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.db_client",
            "aws_security_group.proxy",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpce_from_db_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group-rule/sgr-005704097bfaeab58",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTPS desde Lambda orquestador (db_client)",
            "from_port": 443,
            "id": "sgr-005704097bfaeab58",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-077a50c709e266302",
            "region": "us-east-1",
            "security_group_id": "sg-05ea2d1090704e24f",
            "security_group_rule_id": "sgr-005704097bfaeab58",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sgr-005704097bfaeab58",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.db_client",
            "aws_security_group.vpc_interface_endpoints",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpce_from_fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group-rule/sgr-0143482412e9602d0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTPS desde ECS Fargate",
            "from_port": 443,
            "id": "sgr-0143482412e9602d0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03c20bda36cbea26e",
            "region": "us-east-1",
            "security_group_id": "sg-05ea2d1090704e24f",
            "security_group_rule_id": "sgr-0143482412e9602d0",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "sgr-0143482412e9602d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.fargate",
            "aws_security_group.vpc_interface_endpoints",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:network-acl/acl-0bd67a9bb1696a66a",
            "default_network_acl_id": "acl-0bd67a9bb1696a66a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bd67a9bb1696a66a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397812108",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-025803df16645b2b7",
              "subnet-04d1374f791d7e9fe",
              "subnet-063e740b779b237a9",
              "subnet-0a482c21c4212b357",
              "subnet-0be4a0d11d19df7f3",
              "subnet-0f55fd885ad8f8779"
            ],
            "tags": {
              "Name": "MenuQR-vpc-default"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-default"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:route-table/rtb-0de05bc48ef84f7aa",
            "default_route_table_id": "rtb-0de05bc48ef84f7aa",
            "id": "rtb-0de05bc48ef84f7aa",
            "owner_id": "767397812108",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "MenuQR-vpc-default"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:security-group/sg-0b04a4ebcf1a7e63d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b04a4ebcf1a7e63d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MenuQR-vpc-default"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-default"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:internet-gateway/igw-0a8f40becec43ee88",
            "id": "igw-0a8f40becec43ee88",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc"
            },
            "tags_all": {
              "Name": "MenuQR-vpc"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "igw-0a8f40becec43ee88",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a8f40becec43ee88",
            "id": "r-rtb-08db0d0ceb68c25d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08db0d0ceb68c25d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08db0d0ceb68c25d5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:route-table/rtb-0f9788c9f3576ab7c",
            "id": "rtb-0f9788c9f3576ab7c",
            "owner_id": "767397812108",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08354715a775ceca4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MenuQR-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtb-0f9788c9f3576ab7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:route-table/rtb-068795c15dacb6fcc",
            "id": "rtb-068795c15dacb6fcc",
            "owner_id": "767397812108",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c50dbbe9b6046564",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MenuQR-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtb-068795c15dacb6fcc",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:route-table/rtb-08db0d0ceb68c25d5",
            "id": "rtb-08db0d0ceb68c25d5",
            "owner_id": "767397812108",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8f40becec43ee88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MenuQR-vpc-public"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtb-08db0d0ceb68c25d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8b6ca30c800cdb",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9788c9f3576ab7c",
            "subnet_id": "subnet-063e740b779b237a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtbassoc-00b8b6ca30c800cdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b500ec3ce12517",
            "region": "us-east-1",
            "route_table_id": "rtb-068795c15dacb6fcc",
            "subnet_id": "subnet-0be4a0d11d19df7f3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtbassoc-012b500ec3ce12517",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5f20fa33da5e259",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9788c9f3576ab7c",
            "subnet_id": "subnet-0a482c21c4212b357"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtbassoc-0a5f20fa33da5e259",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e78e5691f66ed696",
            "region": "us-east-1",
            "route_table_id": "rtb-068795c15dacb6fcc",
            "subnet_id": "subnet-0f55fd885ad8f8779"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtbassoc-0e78e5691f66ed696",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035f6060e19403f58",
            "region": "us-east-1",
            "route_table_id": "rtb-08db0d0ceb68c25d5",
            "subnet_id": "subnet-04d1374f791d7e9fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtbassoc-035f6060e19403f58",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d92883dff49696fd",
            "region": "us-east-1",
            "route_table_id": "rtb-08db0d0ceb68c25d5",
            "subnet_id": "subnet-025803df16645b2b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "rtbassoc-0d92883dff49696fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:subnet/subnet-063e740b779b237a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.30.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063e740b779b237a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397812108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "subnet-063e740b779b237a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:subnet/subnet-0be4a0d11d19df7f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be4a0d11d19df7f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397812108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "subnet-0be4a0d11d19df7f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:subnet/subnet-0a482c21c4212b357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a482c21c4212b357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397812108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "subnet-0a482c21c4212b357",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:subnet/subnet-0f55fd885ad8f8779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f55fd885ad8f8779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397812108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "subnet-0f55fd885ad8f8779",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:subnet/subnet-04d1374f791d7e9fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.30.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d1374f791d7e9fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397812108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "subnet-04d1374f791d7e9fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:subnet/subnet-025803df16645b2b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025803df16645b2b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397812108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "MenuQR-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-047fb553fa564aca0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "subnet-025803df16645b2b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397812108:vpc/vpc-047fb553fa564aca0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0bd67a9bb1696a66a",
            "default_route_table_id": "rtb-0de05bc48ef84f7aa",
            "default_security_group_id": "sg-0b04a4ebcf1a7e63d",
            "dhcp_options_id": "dopt-07e2fa5263c4a6fa3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047fb553fa564aca0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de05bc48ef84f7aa",
            "owner_id": "767397812108",
            "region": "us-east-1",
            "tags": {
              "Name": "MenuQR-vpc"
            },
            "tags_all": {
              "Name": "MenuQR-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397812108",
            "id": "vpc-047fb553fa564aca0",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}